--- a/hex.html
+++ b/hex.html
@@ -6,7 +6,7 @@
     <title>Color Flipper || Hex</title>
 
     <!-- styles -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/demo/css/style.css" />
   </head>
 
   <body>
@@ -27,6 +27,6 @@
       </div>
     </main>
     <!-- javascript -->
-    <script src="/js/hex.js"></script>
+    <script src="/demo/js/hex.js"></script>
   </body>
 </html>
